Fixing glitches from Jules